# ast-calculator

./: Cargo.toml  README.md
app/: next.config.mjs  package.json  pnpm-lock.yaml
app/src/app/: page.module.css  page.tsx
app/src/app/eval/: route.ts
src/: evaluate.rs  expression.rs  lexer.rs  lib.rs  main.rs  parser.rs
