[package]
name = "ast-calculator"
version = "0.1.0"
edition = "2021"
description = "A simple AST-based calculator that can parse and evaluate arithmetic expressions"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
